BS-2545, change jacoco configuration to have IT test coverage